--- a/public/admin.html
+++ b/public/admin.html
@@ -1,198 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin Portal</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; background: #f5f5f5; }
-        h1, h2 { color: #333; }
-        .section { background: white; padding: 15px; margin-bottom: 20px; border-radius: 8px; }
-        input, select, button { padding: 8px; margin: 5px 0; width: 100%; max-width: 400px; }
-        table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-        th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-        th { background: #eee; }
-        .btn-danger { background: red; color: white; border: none; cursor: pointer; padding: 5px 8px; }
-        .btn-primary { background: #007BFF; color: white; border: none; cursor: pointer; padding: 8px 12px; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Admin Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 20px; }
+    h1, h2 { color: #333; }
+    .hidden { display: none; }
+    .card { background: white; padding: 16px; margin-bottom: 18px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.08); }
+    input, select, button { margin: 4px; padding: 6px 10px; }
+    table { width: 100%; border-collapse: collapse; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+    th { background: #fafafa; }
+    .row { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+  </style>
 </head>
 <body>
+  <h1>Admin Portal</h1>
+  <div id="loginCard" class="card">
+    <h2>Login</h2>
+    <div class="row">
+      <input id="username" placeholder="Username (admin@example.com)">
+      <input id="password" placeholder="Password (admin123)" type="password">
+      <button id="loginBtn">Login</button>
+    </div>
+    <div id="loginStatus" style="color:#b00;margin-top:8px;"></div>
+  </div>
 
-<h1>Admin Portal</h1>
+  <div id="app" class="hidden">
+    <div class="card">
+      <button id="logoutBtn">Logout</button>
+    </div>
 
-<div class="section">
-    <h2>Manage Spaces</h2>
-    <input type="text" id="spaceName" placeholder="Space name (e.g., Office 1)">
-    <select id="spaceType">
-        <option value="office">Office</option>
-        <option value="desk">Desk</option>
-        <option value="conference">Conference Room</option>
-    </select>
-    <input type="number" id="spaceOrder" placeholder="Auto-book priority order">
-    <button class="btn-primary" onclick="addSpace()">Add Space</button>
+    <div class="card">
+      <h2>Spaces</h2>
+      <div class="row">
+        <input id="spaceName" placeholder="Name">
+        <select id="spaceType">
+          <option value="desk">Desk</option>
+          <option value="office">Office</option>
+          <option value="conference">Conference</option>
+        </select>
+        <input id="spacePriority" type="number" placeholder="Priority (1 = highest)" value="1" min="1">
+        <button id="addSpaceBtn">Add Space</button>
+      </div>
+      <table id="spacesTable"><thead><tr><th>Name</th><th>Type</th><th>Priority</th><th>Action</th></tr></thead><tbody></tbody></table>
+    </div>
 
-    <h3>Existing Spaces</h3>
-    <table id="spacesTable">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Priority Order</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-</div>
+    <div class="card">
+      <h2>Bookings</h2>
+      <div class="row">
+        <input id="bName" placeholder="Name"><input id="bEmail" placeholder="Email">
+        <input id="bDate" type="date">
+        <input id="bStart" placeholder="Start (HH:MM)"><input id="bEnd" placeholder="End (HH:MM)">
+        <select id="bSpace"></select>
+        <button id="addBookingBtn">Add Booking</button>
+      </div>
+      <table id="bookingsTable"><thead><tr><th>Name</th><th>Email</th><th>Space</th><th>Date</th><th>Start</th><th>End</th><th>Action</th></tr></thead><tbody></tbody></table>
+    </div>
 
-<div class="section">
-    <h2>Manage Bookings</h2>
-    <input type="text" id="bookingName" placeholder="Full Name">
-    <input type="email" id="bookingEmail" placeholder="Email Address">
-    <select id="bookingSpace"></select>
-    <input type="date" id="bookingDate">
-    <input type="time" id="bookingStart">
-    <input type="time" id="bookingEnd">
-    <label><input type="checkbox" id="recurringBooking"> Recurring Booking</label>
-    <button class="btn-primary" onclick="addBooking()">Add Booking</button>
+    <div class="card">
+      <h2>Admin Users</h2>
+      <div class="row">
+        <input id="aUser" placeholder="username (email)"><input id="aPass" placeholder="password">
+        <button id="addAdminBtn">Add Admin</button>
+      </div>
+      <table id="adminsTable"><thead><tr><th>Username</th><th>Action</th></tr></thead><tbody></tbody></table>
+    </div>
+  </div>
 
-    <h3>Existing Bookings</h3>
-    <table id="bookingsTable">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Space</th>
-                <th>Date</th>
-                <th>Time</th>
-                <th>Recurring</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-</div>
+  <script>
+    let token = localStorage.getItem('adminToken') || '';
 
-<div class="section">
-    <h2>Manage Admin Users</h2>
-    <input type="text" id="adminUsername" placeholder="Username">
-    <input type="password" id="adminPassword" placeholder="Password">
-    <button class="btn-primary" onclick="addAdminUser()">Add Admin User</button>
+    function setAuthHeaders(opts={}) {
+      opts.headers = opts.headers || {};
+      opts.headers['Authorization'] = 'Bearer ' + token;
+      return opts;
+    }
 
-    <h3>Existing Admins</h3>
-    <table id="adminsTable">
-        <thead>
-            <tr>
-                <th>Username</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-</div>
+    async function login() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const res = await fetch('/api/login', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ username, password }) });
+      if (res.ok) {
+        const data = await res.json();
+        token = data.token;
+        localStorage.setItem('adminToken', token);
+        document.getElementById('loginCard').classList.add('hidden');
+        document.getElementById('app').classList.remove('hidden');
+        await refreshAll();
+      } else {
+        const err = await res.json().catch(()=>({error:'Login failed'}));
+        document.getElementById('loginStatus').textContent = err.error || 'Login failed';
+      }
+    }
 
-<script>
-    async function fetchSpaces() {
-        const res = await fetch('/api/spaces');
-        const spaces = await res.json();
-        const tbody = document.querySelector('#spacesTable tbody');
-        const select = document.querySelector('#bookingSpace');
-        tbody.innerHTML = '';
-        select.innerHTML = '';
-        spaces.forEach(space => {
-            tbody.innerHTML += `
-                <tr>
-                    <td>${space.name}</td>
-                    <td>${space.type}</td>
-                    <td>${space.priorityOrder}</td>
-                    <td><button class="btn-danger" onclick="deleteSpace('${space.id}')">Delete</button></td>
-                </tr>
-            `;
-            select.innerHTML += `<option value="${space.id}">${space.name}</option>`;
-        });
+    async function refreshAll() {
+      await loadSpaces();
+      await loadBookings();
+      await loadAdmins();
+    }
+
+    async function loadSpaces() {
+      const res = await fetch('/api/spaces');
+      const spaces = await res.json();
+      const tbody = document.querySelector('#spacesTable tbody');
+      tbody.innerHTML = '';
+      spaces.forEach(s => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `<td>${s.name}</td><td>${s.type}</td><td>${s.priorityOrder}</td>
+          <td><button data-id="${s.id}" class="delSpace">Delete</button></td>`;
+        tbody.appendChild(tr);
+      });
+      const res2 = await fetch('/api/spaces');
+      const spaces2 = await res2.json();
+      const sSel = document.getElementById('bSpace');
+      sSel.innerHTML = '';
+      spaces2.forEach(s => {
+        const opt = document.createElement('option');
+        opt.value = s.id; opt.textContent = s.name; sSel.appendChild(opt);
+      });
     }
 
     async function addSpace() {
-        const name = document.getElementById('spaceName').value;
-        const type = document.getElementById('spaceType').value;
-        const order = document.getElementById('spaceOrder').value;
-        await fetch('/api/spaces', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name, type, priorityOrder: order }) });
-        fetchSpaces();
+      const name = document.getElementById('spaceName').value.trim();
+      const type = document.getElementById('spaceType').value;
+      const priorityOrder = Number(document.getElementById('spacePriority').value || '1');
+      const res = await fetch('/api/spaces', setAuthHeaders({ method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ name, type, priorityOrder }) }));
+      if (res.ok) { await loadSpaces(); document.getElementById('spaceName').value=''; }
     }
 
     async function deleteSpace(id) {
-        await fetch(`/api/spaces/${id}`, { method: 'DELETE' });
-        fetchSpaces();
+      await fetch('/api/spaces/' + id, setAuthHeaders({ method:'DELETE' }));
+      await loadSpaces();
     }
 
-    async function fetchBookings() {
-        const res = await fetch('/api/bookings');
-        const bookings = await res.json();
-        const tbody = document.querySelector('#bookingsTable tbody');
-        tbody.innerHTML = '';
-        bookings.forEach(b => {
-            tbody.innerHTML += `
-                <tr>
-                    <td>${b.name}</td>
-                    <td>${b.email}</td>
-                    <td>${b.spaceName}</td>
-                    <td>${b.date}</td>
-                    <td>${b.startTime} - ${b.endTime}</td>
-                    <td>${b.recurring ? 'Yes' : 'No'}</td>
-                    <td><button class="btn-danger" onclick="deleteBooking('${b.id}')">Delete</button></td>
-                </tr>
-            `;
-        });
+    async function loadBookings() {
+      const res = await fetch('/api/bookings', setAuthHeaders());
+      const bookings = await res.json();
+      const tbody = document.querySelector('#bookingsTable tbody');
+      tbody.innerHTML = '';
+      bookings.forEach(b => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `<td>${b.name}</td><td>${b.email}</td><td>${b.spaceName}</td><td>${b.date}</td><td>${b.startTime}</td><td>${b.endTime}</td>
+          <td><button data-id="${b.id}" class="delBooking">Cancel</button></td>`;
+        tbody.appendChild(tr);
+      });
     }
 
     async function addBooking() {
-        const name = document.getElementById('bookingName').value;
-        const email = document.getElementById('bookingEmail').value;
-        const spaceId = document.getElementById('bookingSpace').value;
-        const date = document.getElementById('bookingDate').value;
-        const startTime = document.getElementById('bookingStart').value;
-        const endTime = document.getElementById('bookingEnd').value;
-        const recurring = document.getElementById('recurringBooking').checked;
-        await fetch('/api/bookings', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name, email, spaceId, date, startTime, endTime, recurring }) });
-        fetchBookings();
+      const body = {
+        name: document.getElementById('bName').value.trim(),
+        email: document.getElementById('bEmail').value.trim(),
+        date: document.getElementById('bDate').value,
+        startTime: document.getElementById('bStart').value,
+        endTime: document.getElementById('bEnd').value,
+        spaceId: document.getElementById('bSpace').value,
+        recurring: false
+      };
+      const res = await fetch('/api/bookings', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(body) });
+      if (res.ok) { await loadBookings(); }
     }
 
     async function deleteBooking(id) {
-        await fetch(`/api/bookings/${id}`, { method: 'DELETE' });
-        fetchBookings();
+      await fetch('/api/bookings/' + id, setAuthHeaders({ method:'DELETE' }));
+      await loadBookings();
     }
 
-    async function fetchAdmins() {
-        const res = await fetch('/api/admins');
-        const admins = await res.json();
-        const tbody = document.querySelector('#adminsTable tbody');
-        tbody.innerHTML = '';
-        admins.forEach(a => {
-            tbody.innerHTML += `
-                <tr>
-                    <td>${a.username}</td>
-                    <td><button class="btn-danger" onclick="deleteAdmin('${a.id}')">Delete</button></td>
-                </tr>
-            `;
-        });
+    async function loadAdmins() {
+      const res = await fetch('/api/admins', setAuthHeaders());
+      const admins = await res.json();
+      const tbody = document.querySelector('#adminsTable tbody');
+      tbody.innerHTML = '';
+      admins.forEach(a => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `<td>${a.username}</td><td><button data-id="${a.id}" class="delAdmin">Delete</button></td>`;
+        tbody.appendChild(tr);
+      });
     }
 
-    async function addAdminUser() {
-        const username = document.getElementById('adminUsername').value;
-        const password = document.getElementById('adminPassword').value;
-        await fetch('/api/admins', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ username, password }) });
-        fetchAdmins();
+    async function addAdmin() {
+      const body = { username: document.getElementById('aUser').value.trim(), password: document.getElementById('aPass').value.trim() };
+      const res = await fetch('/api/admins', setAuthHeaders({ method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(body) }));
+      if (res.ok) { await loadAdmins(); }
     }
 
-    async function deleteAdmin(id) {
-        await fetch(`/api/admins/${id}`, { method: 'DELETE' });
-        fetchAdmins();
-    }
-
-    fetchSpaces();
-    fetchBookings();
-    fetchAdmins();
-</script>
-
+    document.addEventListener('DOMContentLoaded', () => {
+      if (token) {
+        document.getElementById('loginCard').classList.add('hidden');
+        document.getElementById('app').classList.remove('hidden');
+        refreshAll();
+      }
+      document.getElementById('loginBtn').addEventListener('click', login);
+      document.getElementById('logoutBtn').addEventListener('click', () => { localStorage.removeItem('adminToken'); token=''; location.reload(); });
+      document.getElementById('addSpaceBtn').addEventListener('click', addSpace);
+      document.getElementById('spacesTable').addEventListener('click', (e) => { if (e.target.classList.contains('delSpace')) deleteSpace(e.target.dataset.id); });
+      document.getElementById('addBookingBtn').addEventListener('click', addBooking);
+      document.getElementById('bookingsTable').addEventListener('click', (e) => { if (e.target.classList.contains('delBooking')) deleteBooking(e.target.dataset.id); });
+      document.getElementById('addAdminBtn').addEventListener('click', addAdmin);
+    });
+  </script>
 </body>
 </html>
