--- a/public/index.html
+++ b/public/index.html
@@ -1,175 +1,157 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Room & Desk Booking</title>
+  <meta charset="UTF-8">
+  <title>Book a Space</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; background:#f8f9fa; color:#333; }
-    .topbar { display:flex; justify-content:space-between; align-items:center; margin-bottom:1rem; }
-    .topbar a { color:#007bff; text-decoration:none; }
-    .topbar a:hover { text-decoration:underline; }
-    .card { background:#fff; padding:1.5rem; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); max-width:650px; margin-bottom:2rem; }
-    label { display:block; margin-top:0.5rem; font-weight:bold; }
-    input, select { width:100%; padding:0.4rem; margin-top:0.25rem; }
-    button { margin-top:1rem; padding:0.5rem 1rem; border-radius:4px; border:none; color:#fff; cursor:pointer; background:#007bff; }
-    button:hover { background:#0056b3; }
-    .row { display:flex; gap:0.75rem; }
-    .row > div { flex:1; }
-    table { width:100%; border-collapse:collapse; }
-    th, td { border:1px solid #ddd; padding:0.5rem; }
-    th { background:#e9ecef; }
-    .filters { display:flex; gap:0.75rem; align-items:end; margin-top:0.5rem; }
-    .success { color:green; margin-top:0.5rem; }
-    .error { color:red; margin-top:0.5rem; }
+    body { font-family: Arial, sans-serif; background: #f9f9f9; margin: 0; padding: 20px; }
+    h1 { text-align: center; color: #333; }
+    .card { background: white; padding: 20px; margin: 0 auto; max-width: 500px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    .field { margin-bottom: 12px; }
+    label { display: block; margin-bottom: 4px; color: #555; }
+    input[type="text"], input[type="email"], input[type="date"], select {
+      width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;
+    }
+    button { background: #007bff; color: white; padding: 10px 16px; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #0056b3; }
+    .status { margin-top: 15px; min-height: 20px; color: #333; }
+    .timepicker-dropdown select { margin-right: 4px; padding: 4px; }
   </style>
 </head>
 <body>
-  <div class="topbar">
-    <h2>Room & Desk Booking</h2>
-    <a href="/admin" target="_blank">Admin portal →</a>
-  </div>
-
-  <!-- Booking card -->
+  <h1>Book a Space</h1>
   <div class="card">
-    <h3>Book a space</h3>
-    <label>Full name</label>
-    <input id="name" type="text" />
-    <label>Email</label>
-    <input id="email" type="email" />
-    <label>Space</label>
-    <select id="room"></select>
-    <div class="row">
-      <div><label>Date</label><input id="date" type="date" /></div>
-      <div><label>Start</label><input id="start" type="time" step="900" /></div>
-      <div><label>End</label><input id="end" type="time" step="900" /></div>
+    <div class="field">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" placeholder="Your name">
     </div>
-    <button id="book">Book</button>
-    <div id="msg"></div>
+    <div class="field">
+      <label for="email">Email Address</label>
+      <input type="email" id="email" placeholder="you@example.com">
+    </div>
+    <div class="field">
+      <label for="date">Date</label>
+      <input type="date" id="date">
+    </div>
+    <div class="field">
+      <label for="start-time">Start Time</label>
+      <input type="text" id="start-time" readonly placeholder="Select time">
+    </div>
+    <div class="field">
+      <label for="end-time">End Time</label>
+      <input type="text" id="end-time" readonly placeholder="Select time">
+    </div>
+    <div class="field">
+      <label for="space">Space</label>
+      <select id="space"></select>
+    </div>
+    <button id="book-btn" type="button">Book</button>
+    <div class="status" id="status"></div>
   </div>
 
-  <!-- Availability / auto-book card -->
-  <div class="card">
-    <h3>Check availability</h3>
-    <div class="row">
-      <div><label>Date</label><input id="avail-date" type="date" /></div>
-      <div><label>Start</label><input id="avail-start" type="time" step="900" /></div>
-      <div><label>End</label><input id="avail-end" type="time" step="900" /></div>
-    </div>
-    <button id="check-avail">Check availability</button>
-    <button id="auto-book">Auto book desk/office</button>
-    <div id="avail-result"></div>
-  </div>
+  <script>
+    async function populateSpaces() {
+      try {
+        const res = await fetch('/api/spaces');
+        const spaces = await res.json();
+        const select = document.getElementById('space');
+        select.innerHTML = '';
+        const autoDesk = document.createElement('option');
+        autoDesk.value = 'auto-desk'; autoDesk.textContent = 'Auto book Desk'; select.appendChild(autoDesk);
+        const autoOffice = document.createElement('option');
+        autoOffice.value = 'auto-office'; autoOffice.textContent = 'Auto book Office'; select.appendChild(autoOffice);
+        spaces.forEach(space => {
+          const opt = document.createElement('option');
+          opt.value = space.id; opt.textContent = space.name; select.appendChild(opt);
+        });
+      } catch (err) { console.error(err); }
+    }
 
-  <!-- Bookings table -->
-  <div class="card">
-    <h3>Existing bookings</h3>
-    <div class="filters">
-      <div><label>Date</label><input id="filter-date" type="date" /></div>
-      <div><label>Space</label><select id="filter-room"><option value="">All</option></select></div>
-      <button id="apply-filter">Apply</button>
-      <button id="clear-filter">Clear</button>
-    </div>
-    <table>
-      <thead><tr><th>Space</th><th>Date</th><th>Start</th><th>End</th><th>Name</th><th>Email</th></tr></thead>
-      <tbody id="tbody"></tbody>
-    </table>
-  </div>
+    function convertTo24h(str) {
+      if (!str) return '';
+      const parts = str.trim().split(' ');
+      if (parts.length < 2) return str;
+      const time = parts[0], period = parts[1];
+      let [hour, minute] = time.split(':');
+      hour = parseInt(hour, 10);
+      if (period === 'PM' && hour !== 12) hour += 12;
+      if (period === 'AM' && hour === 12) hour = 0;
+      return `${hour.toString().padStart(2, '0')}:${minute}`;
+    }
 
-<script>
-const roomLookup = {};
+    function createTimePicker(inputId) {
+      const input = document.getElementById(inputId);
+      const container = document.createElement('div');
+      container.className = 'timepicker-dropdown';
+      container.style.position = 'absolute';
+      container.style.display = 'none';
+      container.style.background = '#fff';
+      container.style.border = '1px solid #ccc';
+      container.style.padding = '6px';
+      container.style.boxShadow = '0 2px 6px rgba(0,0,0,0.2)';
+      container.style.zIndex = 1000;
+      const hourSelect = document.createElement('select');
+      for (let i = 1; i <= 12; i++) {
+        const opt = document.createElement('option');
+        opt.value = i < 10 ? '0' + i : '' + i; opt.textContent = opt.value; hourSelect.appendChild(opt);
+      }
+      const minuteSelect = document.createElement('select');
+      ['00', '15', '30', '45'].forEach(m => { const opt = document.createElement('option'); opt.value = m; opt.textContent = m; minuteSelect.appendChild(opt); });
+      const periodSelect = document.createElement('select');
+      ['AM', 'PM'].forEach(p => { const opt = document.createElement('option'); opt.value = p; opt.textContent = p; periodSelect.appendChild(opt); });
+      const setBtn = document.createElement('button');
+      setBtn.type = 'button'; setBtn.textContent = 'Set'; setBtn.style.marginLeft = '8px';
+      setBtn.onclick = () => { const value = `${hourSelect.value}:${minuteSelect.value} ${periodSelect.value}`; input.value = value; container.style.display = 'none'; };
+      container.appendChild(hourSelect); container.appendChild(minuteSelect); container.appendChild(periodSelect); container.appendChild(setBtn);
+      document.body.appendChild(container);
+      input.addEventListener('focus', () => {
+        const rect = input.getBoundingClientRect();
+        container.style.left = `${rect.left + window.scrollX}px`;
+        container.style.top = `${rect.bottom + window.scrollY + 2}px`;
+        container.style.display = 'block';
+      });
+      document.addEventListener('click', (e) => {
+        if (e.target !== input && !container.contains(e.target)) container.style.display = 'none';
+      });
+    }
 
-async function loadRooms() {
-  const rooms = await (await fetch('/api/rooms')).json();
-  const select = document.getElementById('room');
-  const filter = document.getElementById('filter-room');
-  rooms.forEach(r => {
-    roomLookup[r.id] = r;
-    const opt1=document.createElement('option'); opt1.value=r.id; opt1.textContent=`${r.name} (${r.type})`; select.appendChild(opt1);
-    const opt2=document.createElement('option'); opt2.value=r.id; opt2.textContent=`${r.name} (${r.type})`; filter.appendChild(opt2);
-  });
-}
+    async function doBook() {
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const date = document.getElementById('date').value;
+      const startRaw = document.getElementById('start-time').value;
+      const endRaw = document.getElementById('end-time').value;
+      const spaceVal = document.getElementById('space').value;
+      const statusEl = document.getElementById('status');
+      statusEl.style.color = '#333';
+      if (!name || !email || !date || !startRaw || !endRaw || !spaceVal) { statusEl.textContent = 'Please fill in all fields.'; return; }
+      const startTime = convertTo24h(startRaw);
+      const endTime = convertTo24h(endRaw);
+      try {
+        if (spaceVal.startsWith('auto-')) {
+          const type = spaceVal === 'auto-desk' ? 'desk' : 'office';
+          const params = new URLSearchParams({ type, date, start: startTime, end: endTime, name, email });
+          const res = await fetch('/api/bookings/auto?' + params.toString());
+          if (res.ok) { const data = await res.json(); statusEl.style.color = 'green'; statusEl.textContent = `Success! Reserved ${data.spaceName} on ${date}.`; }
+          else { const err = await res.json(); statusEl.style.color = 'red'; statusEl.textContent = err.error || 'Auto-book failed.'; }
+        } else {
+          const res = await fetch('/api/bookings', {
+            method: 'POST', headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name, email, spaceId: spaceVal, date, startTime, endTime, recurring: false })
+          });
+          if (res.ok) { const data = await res.json(); statusEl.style.color = 'green'; statusEl.textContent = `Success! Your booking ID is ${data.id}.`; }
+          else { const err = await res.json(); statusEl.style.color = 'red'; statusEl.textContent = err.error || 'Booking failed.'; }
+        }
+      } catch (err) { console.error(err); statusEl.style.color = 'red'; statusEl.textContent = 'An error occurred while booking.'; }
+    }
 
-function formatTime(d) { return d.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}); }
-
-async function loadBookings() {
-  const params=new URLSearchParams();
-  const d=document.getElementById('filter-date').value;
-  const r=document.getElementById('filter-room').value;
-  if (d) params.set('date', d);
-  if (r) params.set('room_id', r);
-  const list = await (await fetch('/api/bookings'+(params.toString()?`?${params}`:''))).json();
-  const tb=document.getElementById('tbody'); tb.innerHTML='';
-  list.forEach(b => {
-    const tr=document.createElement('tr');
-    const s=new Date(b.start), e=new Date(b.end);
-    tr.innerHTML = `
-      <td>${roomLookup[b.room_id]?.name || b.room_id}</td>
-      <td>${s.toLocaleDateString()}</td>
-      <td>${formatTime(s)}</td>
-      <td>${formatTime(e)}</td>
-      <td>${b.name||''}</td>
-      <td>${b.email||''}</td>`;
-    tb.appendChild(tr);
-  });
-}
-
-async function createBooking() {
-  const name=document.getElementById('name').value.trim();
-  const email=document.getElementById('email').value.trim();
-  const room_id=parseInt(document.getElementById('room').value,10);
-  const date=document.getElementById('date').value;
-  const start=document.getElementById('start').value;
-  const end=document.getElementById('end').value;
-  const msg=document.getElementById('msg'); msg.textContent=''; msg.className='';
-  if (!name||!email||!room_id||!date||!start||!end) { msg.textContent='Please fill out all fields'; msg.className='error'; return; }
-  const res=await fetch('/api/bookings',{ method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({name,email,room_id,date,start_time:start,end_time:end}) });
-  if (res.status===200) { msg.textContent='Booking successful!'; msg.className='success'; loadBookings(); }
-  else if (res.status===409) { msg.textContent='Time slot already booked.'; msg.className='error'; }
-  else { msg.textContent=await res.text(); msg.className='error'; }
-}
-
-async function checkAvailability() {
-  const date=document.getElementById('avail-date').value;
-  const start=document.getElementById('avail-start').value;
-  const end=document.getElementById('avail-end').value;
-  const resDiv=document.getElementById('avail-result');
-  resDiv.innerHTML='';
-  if (!date||!start||!end) { resDiv.textContent='Please choose date and time'; return; }
-  const res=await fetch(`/api/availability?date=${encodeURIComponent(date)}&start_time=${encodeURIComponent(start)}&end_time=${encodeURIComponent(end)}`);
-  const data=await res.json();
-  data.forEach(item => {
-    const p=document.createElement('p');
-    p.textContent=`${item.name} (${item.type}): ${item.available?'Available':'Booked'}`;
-    resDiv.appendChild(p);
-  });
-}
-
-async function autoBook() {
-  const date=document.getElementById('avail-date').value;
-  const start=document.getElementById('avail-start').value;
-  const end=document.getElementById('avail-end').value;
-  const name=document.getElementById('name').value.trim();
-  const email=document.getElementById('email').value.trim();
-  const msg=document.getElementById('avail-result');
-  msg.textContent='';
-  if (!date||!start||!end||!name||!email) { msg.textContent='Complete date/time and name/email'; msg.className='error'; return; }
-  const res=await fetch('/api/bookings/auto', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ date, start_time:start, end_time:end, name, email }) });
-  if (res.status===200) { msg.textContent='Auto-booked successfully!'; msg.className='success'; loadBookings(); }
-  else { msg.textContent=await res.text(); msg.className='error'; }
-}
-
-document.getElementById('book').addEventListener('click', createBooking);
-document.getElementById('apply-filter').addEventListener('click', loadBookings);
-document.getElementById('clear-filter').addEventListener('click', () => {
-  document.getElementById('filter-date').value='';
-  document.getElementById('filter-room').value='';
-  loadBookings();
-});
-document.getElementById('check-avail').addEventListener('click', checkAvailability);
-document.getElementById('auto-book').addEventListener('click', autoBook);
-
-loadRooms().then(loadBookings);
-</script>
+    document.addEventListener('DOMContentLoaded', () => {
+      populateSpaces();
+      createTimePicker('start-time');
+      createTimePicker('end-time');
+      document.getElementById('book-btn').addEventListener('click', doBook);
+    });
+  </script>
 </body>
 </html>
